# pack-your-jeju

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AIFFELTHON_ALIGNMENT.md  CLAUDE.md  DATA_PIPELINE.md  DECISIONS.md  DEMO_PRESENTATION.md  DEPLOYMENT_STATUS.md  Dockerfile  EVAL_GOLDENSET.md  MOMENT_CARDS.md  PLAN_4DAYS.md  PRD.md  README.md  TRUST_ENGINE.md  docker-compose.yml  pyproject.toml  railway.toml
apps/api/: auth.py  bootstrap.py  db.py  logging.py  main.py  storage.py
apps/pipelines/: ingest_file.py  ingest_jejuits.py  (+3 more)
data/: README.md  haruban_intro_smoke.json  verify_kick1.json  verify_kick1_g14.json  verify_smoke_1.json  verify_smoke_2.json  verify_smoke_3.json
docs/: COMPETITION_PRODUCT_PLAN.md  PROJECT_STRUCTURE.md  deploy.md  haruban_agent_implementation.md  kick3_stats.md  local_demo.md  pack_your_jeju_slides.pptx  qa_cards.md  rehearsal.md  slides.md  slides_script.md  trust_loop_operations.md
scripts/: build_pwa_icons.py  build_slides_pptx.py  build_team_briefing_pdf.py  capture_user_manual_current_ui.mjs  demo.ps1  generate_jeju_competition_final_business_plan.js  generate_jeju_lifecycle_business_plan.js  generate_jeju_online_submission_entry.js  generate_jeju_online_submission_lifecycle.js  generate_jeju_representative_image.py  generate_user_manual_pdf.py  inspect_solarfit.py  kick3_stats.py  list_gpt5_models.py  run_local_api.py  test_agent_parse.py  test_function_calling.py  validate_jeju_lifecycle_business_plan.py  validate_jeju_online_submission_lifecycle.py  validate_jeju_representative_image.py  validate_user_manual_current_ui.py
(+285 files in other folders)
