[project]
name = "pack-your-jeju"
version = "0.1.0"
description = "Pack Your Jeju — 제주 특화 여행 준비 신뢰 엔진"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
